fixing sponsorship.scss for opal image alignment

--- a/app/assets/stylesheets/sponsorship.scss
+++ b/app/assets/stylesheets/sponsorship.scss
@@ -21,4 +21,9 @@
   .sponsor-logo-opal {
     width: 200px;
   }
+  
+  .sponsor-logo-opal img { 
+    padding: 0 100px 0 0 
+  }
 }
+
